--- a/HW1/myContacts.html
+++ b/HW1/myContacts.html
@@ -59,7 +59,7 @@
         </tr>
         <tr>
             <td>Department of Electrical and Computer Engineering</td>
-            <td>200 Union St SE<br>>Minneapolis, MN 55455</td>
+            <td>200 Union St SE<br>Minneapolis, MN 55455</td>
             <td>Academic depertment office</td>
             <td><a href="mailto://ece@umn.edu">ece@umn.edu</a></td>
             <td><a href="https://ece.umn.edu/">Main Page</a></td>
