--- a/HW/myContacts.html
+++ b/HW/myContacts.html
@@ -35,6 +35,7 @@
         <p><a href="myContacts.html">Contacts</a></p>
         <p><a href="myWidgets.html">Widgets</a></p>
         <p><a href="myForm.html">Form</a></p>
+        <p><a href="MyServer.html">Server</a></p>
     </nav>
 
     <h1>My Contacts</h1>
