--- a/HW/myWidgets.html
+++ b/HW/myWidgets.html
@@ -54,6 +54,7 @@
         <p><a href="myContacts.html">Contacts</a></p>
         <p><a href="myWidgets.html">Widgets</a></p>
         <p><a href="myForm.html">Form</a></p>
+        <p><a href="MyServer.html">Server</a></p>
     </nav>
 
     <h1>My Widgets</h1>
