--- a/HW/myForm.html
+++ b/HW/myForm.html
@@ -5,6 +5,15 @@
     <title>My Form</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <script>
+        var map;
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: { lat: 44.9727, lng: -93.23540000000003 },
+                zoom: 14
+            });
+        }
+    </script>
 </head>
 
 <body>
@@ -37,6 +46,11 @@
         <input type="submit" value="Submit">
     </form>
 
+    <div id="map"></div>
+
+    <script async
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwroIOiVrSqVbZT_-mhERwOS5AwwSMakE&libraries=places&callback=initMap">
+        </script>
 </body>
 
 </html>
