--- a/biedn001_hw06/public/stock.html
+++ b/biedn001_hw06/public/stock.html
@@ -85,7 +85,7 @@
     </table>
   </div>
 
-  <script>zz
+  <script>
    /* TODO:
    /    Bonus 1. Request the TIME_SERIES_DAILY endpoint of alphavantage API
    /             for the company selected in the dropdown. Display the JSON
